--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,9 @@ footer{
     color: #fff;
     text-decoration: none;
 
-    padding: 20px 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
 }
 
 .copyright{
