--- a/css/style.css
+++ b/css/style.css
@@ -339,12 +339,15 @@ body{
 
 .tablinks{
     width: 25%;
+    color: #000;
     background-color: bisque;
     border: none;
     text-align: center;
     float: left;
 
-    padding: 15px 20px;
+    /* padding: 15px 20px; */
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .tablinks:hover{
